# Copyright 2021 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//bazel:spu.bzl", "spu_cc_binary", "spu_cc_library")

package(
    default_visibility = ["//visibility:public"],
)

spu_cc_binary(
    name = "main",
    srcs = ["main.cc"],
    tags = ["no-remote-cache"],
    deps = [
        ":compile",
    ],
)

spu_cc_library(
    name = "compile",
    srcs = ["compile.cc"],
    hdrs = ["compile.h"],
    deps = [
        "//spu/compiler/codegen",
        "//spu/compiler/common:compilation_context",
        "//spu/compiler/core",
        "//spu/compiler/front_end:fe",
    ],
)
