# Copyright 2021 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//bazel:spu.bzl", "spu_cc_library", "spu_cc_test")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_cc//cc:defs.bzl", "cc_proto_library")

package(default_visibility = ["//visibility:public"])

spu_cc_library(
    name = "device",
    deps = [
        ":frame",
        ":io",
    ],
)

proto_library(
    name = "device_proto",
    srcs = ["device.proto"],
    deps = [
        "//spu:spu_proto",
    ],
)

cc_proto_library(
    name = "device_cc_proto",
    deps = [":device_proto"],
)

spu_cc_library(
    name = "io",
    srcs = ["io.cc"],
    hdrs = ["io.h"],
    deps = [
        ":device_cc_proto",
        ":symbol_table",
        "//spu:spu_cc_proto",
        "//spu/core:xt_helper",
        "//spu/kernel:context",
        "//spu/kernel:value",
        "//spu/kernel/hal:constants",
        "//spu/mpc:factory",
    ],
)

spu_cc_test(
    name = "io_test",
    srcs = ["io_test.cc"],
    deps = [
        ":io",
        "//spu/mpc/util:simulate",
    ],
)

spu_cc_library(
    name = "frame",
    srcs = ["frame.cc"],
    hdrs = ["frame.h"],
    deps = [
        ":type_checker",
        "//spu/dialect:pphlo_dialect",
        "//spu/kernel:value",
        "@llvm-project//mlir:IR",
        "@yasl//yasl/base:exception",
    ],
)

spu_cc_library(
    name = "executor",
    srcs = ["executor.cc"],
    hdrs = ["executor.h"],
    deps = [
        ":profiler",
        ":symbol_table",
        "//spu:spu_cc_proto",
        "//spu/kernel:context",
        "//spu/kernel:value",
        "//spu/kernel/hal:polymorphic",
    ],
)

spu_cc_library(
    name = "test_utils",
    testonly = True,
    hdrs = ["test_utils.h"],
    deps = [
        ":io",
        ":symbol_table",
        "//spu:spu_cc_proto",
        "//spu/core:array_ref",
        "//spu/mpc/util:simulate",
    ],
)

spu_cc_library(
    name = "symbol_table",
    srcs = ["symbol_table.cc"],
    hdrs = ["symbol_table.h"],
    deps = [
        ":device_cc_proto",
        "//spu/core:xt_helper",
        "//spu/kernel:value",
    ],
)

spu_cc_library(
    name = "type_checker",
    srcs = ["type_checker.cc"],
    hdrs = ["type_checker.h"],
    deps = [
        "//spu/kernel:value",
        "@llvm-project//mlir:IR",
    ],
)

spu_cc_library(
    name = "profiler",
    hdrs = ["profiler.h"],
)
