# Copyright 2024 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//bazel:spu.bzl", "spu_py_library")

spu_py_library(
    name = "experimentals",
    srcs = [
        "__init__.py",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        ":drop_cached_var",
        ":make_cached_var",
        ":reveal",
    ],
)

spu_py_library(
    name = "make_cached_var",
    srcs = [
        "make_cached_var_impl.py",
    ],
    visibility = [
        "//visibility:private",
    ],
)

spu_py_library(
    name = "drop_cached_var",
    srcs = [
        "drop_cached_var_impl.py",
    ],
    visibility = [
        "//visibility:private",
    ],
)

spu_py_library(
    name = "reveal",
    srcs = [
        "reveal_impl.py",
    ],
    visibility = [
        "//visibility:private",
    ],
)
