# Copyright 2023 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "all_intrinsics",
    srcs = [
        "__init__.py",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        ":example",
        ":example_binary",
        ":permute",
        # DO-NOT-EDIT:ADD_IMPORT
    ],
)

py_library(
    name = "example",
    srcs = [
        "example_impl.py",
    ],
    visibility = [
        "//visibility:private",
    ],
)

py_library(
    name = "example_binary",
    srcs = [
        "example_binary_impl.py",
    ],
    visibility = [
        "//visibility:private",
    ],
)

py_library(
    name = "permute",
    srcs = [
        "permute_impl.py",
    ],
    visibility = [
        "//visibility:private",
    ],
)
        
        